	* When generating a Visual Studio solution, a .build_info file will now get generated (this should've been happening before, but it wasn't).
	* The default values of BuilderOptions are now correctly serialized into the .build_info file that gets generated when you generate a Visual Studio solution.
* If no input file is specified, Builder will now tell you that you can pass -h as a command line arg to get help on how to use Builder.
* Added BuilderOptions::warnings_as_errors.
* Make things clearer in the README.
* Builder will now fatal error if it can't create the binary folder that you specify inside set_builder_options().
* Better, more helpful information is displayed when you use the help command line argument.
* Intermediate files no longer contain the file extension of the input file in the output binary file name when the input file is a C++ code file.
* on_pre_build() and on_post_build() no longer have BuilderOptions* as a parameter, since it's not known how likely people are to need access to BuilderOptions in those functions, currently.
	* This is the only time I see a change like this happening.  I should have thought longer about how users are going to use these entry points, what they were going to use them for, and what data they actually needed.

----------------------------------------------------------------

v0.1.1, 12/10/2024:

* Builder will no longer crash if it can't resolve a source file to include in the build and will instead show you an error saying it can't resolve the source file(s) and exit.
* Fixed another ABI incompatibility issue between Builder and the user config DLL that caused a crash when trying to write to any of the std::vectors.
* Fixed a bunch of things that were broken for generating Visual Studio project files after removing our dependency to Core.
* VisualStudioSolution::path is now relative to the source file that implements set_visual_studio_options, as the documentation says.
